--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
@@ -99,12 +99,13 @@
       <div class="col-md-12" >
         <input type="hidden" formControlName="id"/>  
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" formControlName="assessmentCode" id="assessmentCode" placeholder="assessmentCode" [value]=" this.riskAssessmentId">
+          <input type="text" class="form-control" formControlName="assessmentCode" id="assessmentCode" placeholder="assessmentCode" [readonly]="true">
+         
           <label for="floatingInput">Assessment Code</label>
         </div>
           <div form-floating>
             <select aria-label="Floating label select example" cSelect id="countryId"
-              formControlName="countryId" name="countryId"  (change)="GetRiskAssessmentId($event)">
+              formControlName="countryId" name="countryId"  (change)="GetRiskAssessmentCode($event)">
               <option value=null>Select Country Level</option>
               <option *ngFor="let country of countries" [value]="country.id">
                 {{country.name}}
@@ -188,7 +189,7 @@
               <form [formGroup]="searchForm1">
                 <div class="row" style="margin: 0 auto;">
                   <div class="col-md-5 mb-2">
-                    <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
+                    <button [cModalToggle]="verticallyCenteredModalAuditPlan.id" class="btnCreateColor" (click)="reset()" cButton>
                       <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
                     </button> 
                   </div>
@@ -227,17 +228,17 @@
                         <td>{{ auditPlan.assessmentTo | date:'medium' }}</td>
                         <td>
                           <div class="btn-group" role="group" aria-label="Basic example">
-                            <button type="button" class="btn btn-secondary btnEditColor" (click)="edit(verticallyCenteredModal,riskAssessment)">
+                            <button type="button" class="btn btn-secondary btnEditColor" (click)="editAuditPlan(verticallyCenteredModalAuditPlan,auditPlan)">
                               <svg cIcon name="cilPencil" size="md" title="Edit Button icon"></svg>
                             </button>
-                            <button type="button" class="btn btn-danger btnDeleteColor" (click)="delete(riskAssessment.id)">
+                            <button type="button" class="btn btn-danger btnDeleteColor" (click)="deleteAuditPlan(auditPlan.id)">
                               <svg cIcon name="cilTrash" size="md" title="Delete Button Icon"></svg>
                             </button>
                           </div>
                         </td>
                       </tr>
                     </tbody>
-                    <tbody *ngIf="riskAssessments?.length == 0">
+                    <tbody *ngIf="auditPlans?.length == 0">
                       <tr>
                         <td colspan="5" class="no-data-available">No data!</td>
                       </tr>
@@ -250,25 +251,25 @@
       </div>
   </div>
   
-<form [formGroup]="auditPlanForm" (ngSubmit)="onAuditPlanSubmit(verticallyCenteredModal)" novalidate>
-  <c-modal #verticallyCenteredModal alignment="center" id="verticallyCenteredModal">
+<form [formGroup]="auditPlanForm" (ngSubmit)="onAuditPlanSubmit(verticallyCenteredModalAuditPlan)" novalidate>
+  <c-modal #verticallyCenteredModalAuditPlan alignment="center" id="verticallyCenteredModalAuditPlan">
     <c-modal-header>
       <h5 cModalTitle *ngIf="!formService.isEdit(this.auditPlanForm.get('id'))">Create Audit Plan</h5>
       <h5 cModalTitle *ngIf="formService.isEdit(this.auditPlanForm.get('id'))">Update Audit Plan</h5>
-      <button [cModalToggle]="verticallyCenteredModal.id" cButtonClose></button> 
+      <button [cModalToggle]="verticallyCenteredModalAuditPlan.id" cButtonClose></button> 
     </c-modal-header>
       <c-modal-body>
       <div class="col-md-12" >
         <input type="hidden" formControlName="id"/>  
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" formControlName="planCode" id="planCode" placeholder="planCode">
+          <input type="text" class="form-control" formControlName="planCode" id="planCode" placeholder="planCode" [readonly]="true">
           <label for="floatingInput">Plan Id</label>
         </div>
         <div class="row">
         <div class="col-md-6">
           <div form-floating>
             <select aria-label="Floating label select example" cSelect id="countryId"
-              formControlName="countryId" name="countryId">
+              formControlName="countryId" name="countryId" (change)="GetAuditPlanCode($event)">
               <option value=null>Select Country Level</option>
               <option *ngFor="let country of countries" [value]="country.id">
                 {{country.name}}
@@ -351,9 +352,9 @@
             <label for="assessmentFrom">Assessment From</label>
           </div>
     
-              <div cRow *ngIf="auditPlanForm.get('effectiveFrom')?.invalid && auditPlanForm.get('effectiveFrom')?.errors &&
-                    (auditPlanForm.get('effectiveFrom')?.dirty || auditPlanForm.get('effectiveFrom')?.touched)">
-                <small class="text-danger" *ngIf="auditPlanForm.get('effectiveFrom').hasError('required')">
+              <div cRow *ngIf="auditPlanForm.get('assessmentFrom')?.invalid && auditPlanForm.get('assessmentFrom')?.errors &&
+                    (auditPlanForm.get('assessmentFrom')?.dirty || auditPlanForm.get('assessmentFrom')?.touched)">
+                <small class="text-danger" *ngIf="auditPlanForm.get('assessmentFrom').hasError('required')">
                   This field is required.
                 </small>                                 
               </div>
@@ -363,11 +364,11 @@
         <div class="col-md-6">
           <div class="form-floating">
             <input class="form-control" placeholder="assessmentTo" formControlName="assessmentTo" id="assessmentTo" type="date" >
-            <label for="assessmentTo">Effective To</label>
+            <label for="assessmentTo">Assessment To</label>
           </div>
-          <div cRow *ngIf="auditPlanForm.get('effectiveTo')?.invalid && auditPlanForm.get('effectiveTo')?.errors &&
-                (auditPlanForm.get('effectiveTo')?.dirty || auditPlanForm.get('effectiveTo')?.touched)">
-            <small class="text-danger" *ngIf="auditPlanForm.get('effectiveTo').hasError('required')">
+          <div cRow *ngIf="auditPlanForm.get('assessmentTo')?.invalid && auditPlanForm.get('assessmentTo')?.errors &&
+                (auditPlanForm.get('assessmentTo')?.dirty || auditPlanForm.get('assessmentTo')?.touched)">
+            <small class="text-danger" *ngIf="auditPlanForm.get('assessmentTo').hasError('required')">
               This field is required.
             </small>                                 
           </div>
@@ -378,8 +379,8 @@
       </div>
     </c-modal-body> 
       <c-modal-footer>
-      <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onAuditPlanSubmit(verticallyCenteredModal)">Save</button>
-            <button [cModalToggle]="verticallyCenteredModal.id" cButton class="btn btn-danger btnCancelColor me-1"> 
+      <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onAuditPlanSubmit(verticallyCenteredModalAuditPlan)">Save</button>
+            <button [cModalToggle]="verticallyCenteredModalAuditPlan.id" cButton class="btn btn-danger btnCancelColor me-1"> 
             Close
         </button> 
     </c-modal-footer> 
