--- a/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
@@ -174,7 +174,7 @@
             </small>                                                      
           </div>
           <small class="text-danger" *ngIf="riskProfileForm.hasError('invalidDateRange')">
-            Effective from should be greater than effective to.
+            Effective to should be greater than effective from.
           </small>          
           <br>          
   
